--- a/SoapOpera/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SoapOpera/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -311,6 +311,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 OpenAssetsAtExit=/Game/Blueprints/Plate_Blueprint.Plate_Blueprint
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -2038,13 +2039,15 @@ CapsuleComponent.Tags=True
 CapsuleComponent.Cooking=True
 PlayerStart.Favorites=True
 CapsuleComponent.Favorites=True
+Plate_Blueprint_C.Favorites=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Models/Sink_Plane
-MRUItem1=/Game/Blueprints/Plate_Blueprint
-MRUItem2=/Game/Sprite/bubble_MAT
-MRUItem3=/Game/Niagra/Bubbles_NS
-MRUItem4=/Game/StarterContent/Maps/StarterMap
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Models/Sink_Plane
+MRUItem2=/Game/Blueprints/Plate_Blueprint
+MRUItem3=/Game/Sprite/bubble_MAT
+MRUItem4=/Game/Niagra/Bubbles_NS
+MRUItem5=/Game/StarterContent/Maps/StarterMap
 
 [MessageLog]
 LastLogListing=FBXImport
